# Formal_Practikum1

./: CMakeLists.txt  MyRegexp.h  README.md  Source.cpp  tests.cpp
built/: CMakeCache.txt  Makefile  cmake_install.cmake  runTests
built/SourceTesting_coverage/: index.Source.cpp.html  index.html  index.tests.cpp.html
